# ML-expert

./: .gitattributes  README.md  main.py  pyproject.toml  requirements.txt
data/: metadata.json
data/dataset/: dataset_info.json
data/dataset/test/: test_corpus.json
data/dataset/val/: val_corpus.json
data/hf_dataset/: README.md  test.jsonl  validation.jsonl
data/hf_dataset/test/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/hf_dataset/train/: dataset_info.json  state.json
data/hf_dataset/validation/: data-00000-of-00001.arrow  dataset_info.json  state.json
data/processed/: arxiv_2502.19965v1.json  arxiv_2502.19974v1.json  arxiv_2502.19983v1.json  arxiv_2502.20008v1.json  arxiv_2502.20018v1.json  arxiv_2502.20022v1.json  arxiv_2502.20040v1.json  arxiv_2502.20047v1.json  arxiv_2502.20048v1.json  arxiv_2502.20057v1.json  arxiv_2502.20084v1.json  arxiv_2502.20093v1.json  arxiv_2502.20108v2.json  arxiv_2502.20111v1.json  arxiv_2502.20126v1.json  arxiv_2502.20129v1.json  arxiv_2502.20132v2.json  arxiv_2502.20134v1.json  arxiv_2502.20156v1.json  arxiv_2502.20167v1.json  arxiv_2502.20172v1.json  arxiv_2502.20199v1.json  arxiv_2502.20221v2.json  arxiv_2502.20225v1.json  arxiv_2502.20237v1.json  arxiv_2502.20249v1.json  arxiv_2502.20271v1.json  arxiv_2502.20298v1.json  arxiv_2502.20309v1.json  arxiv_2502.20310v1.json  arxiv_2502.20339v1.json  arxiv_2502.20347v1.json  arxiv_2502.20351v1.json  arxiv_2502.20359v1.json  arxiv_2502.20364v1.json  arxiv_2502.20435v1.json  arxiv_2502.20446v1.json  arxiv_2502.20479v1.json  arxiv_2502.20525v1.json  arxiv_2502.20549v1.json  (+261 more)
ml_corpus/: metadata.json
ml_expert.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: gather_data.py  train.py
scripts/create_dataset/: downlaod_papers.py  process_papers.py
scripts/create_dataset/olmocr/prompts/: prompts.py
