[project]
name = "ml-expert"
version = "0.1.0"
description = "ML research paper processing and dataset creation"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5.1",
    "transformers>=4.46.2",
    "sglang>=0.1.11",
    "accelerate>=0.27.1",
    "pypdf>=5.2.0",
    "pypdfium2",
    "pdf2image",
    "poppler-utils",
    "lingua-language-detector",
    "ftfy",
    "bleach",
    "markdown2",
    "Pillow",
    "smart_open",
    "zstandard",
    "orjson",
    "cached-path",
    "boto3",
    "httpx",
    "requests",
    "cryptography",
    "tqdm",
    "filelock",
    "asyncio",
    "olmocr @ git+https://github.com/allenai/olmocr.git",
    "pytorch-lightning",
    "datasets",
    "peft",
]

[tool.black]
line-length = 160
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 160
target-version = "py311"
